5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1828_1648.log
== TEST (2019-06-12 14:27:40) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:54) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:36) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		v[j] = i
	j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:32:13) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:32:26) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:32:44) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
	j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:03) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for j in range(size(vet)):
	if(vet[i] < 70):
		v[j] = i
	j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:27) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for j in range(size(vet)):
	if(vet[i] < 70):
		v[j] = i
		i = v[j]
		j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:04) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(vet)):
	if(vet[i] < 70):
		v[j] = i
		i = v[j]
	i = i+1
	j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:20) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = v[j]
	i = i+1
	j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:49) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = v[j]
		j = j + 1
	i = i + 1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:22) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		j = j + 1
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:41:31) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		j = j + 1
	i = i + 1
print(v)
-- EXECUTION TIME:
1.20062
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 1 2]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:32) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		j = j + 1
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:38) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
	j = j + 1
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:52) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
j = j + 1
i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:10) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		j = j + 1
i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:19) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		j = j + 1
	i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:08) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
	j = j + 1
		i = i + 1
print(v)
-- ERROR:
File "XXXX", line 15
    i = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:22) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
	j = j +1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:47) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:45:00) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
		j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:26) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:58) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		j =j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:18) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
	i =i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	i = i +1
	if(vet[i] < 70):
		i = v[j]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:07) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		i = v[j]
		i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:55:57) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
0.955592
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:58) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:26) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
1.84692
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:27) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
3.5522
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
8.62331
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
10.1082
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
11.2626
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
12.2832
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
13.2092
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
14.2246
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
15.2648
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
2
[0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:47) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
1.56525
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
aulas frequentadas:3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
aulas frequentadas:2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:48) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.1916
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
aulas frequentadas:3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
aulas frequentadas:2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:49) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
8.48103
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
aulas frequentadas:3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
aulas frequentadas:2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:50) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
8.50964
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
aulas frequentadas:3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
aulas frequentadas:2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:51) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
9.3956
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
aulas frequentadas:3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
aulas frequentadas:2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:56:52) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
10.4137
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
aulas frequentadas:2
[0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
3
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:06) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.02004
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:07) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.35847
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:08) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.20402
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:09) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.19577
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:10) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.21959
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:11) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.44682
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
2
[0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
3
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:25) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
5.88362
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:26) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
5.92382
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:27) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.11168
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:28) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.22083
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:29) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.33705
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:30) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.5401
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
2
[0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
3
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:44) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.55802
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:46) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.67461
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:47) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.48348
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:48) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.28842
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:49) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.22136
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:50) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.15378
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
2
[0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
3
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:57) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
6.52201
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:

-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:58) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
5.06519
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:

-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:58) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
4.71221
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:

-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:58) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
4.52227
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:

-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:58) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
i = 0
for j in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		i = i + 1
print(v)
-- EXECUTION TIME:
4.02125
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1828/1648/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:49) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(vet)):
	if(vet[i] > 70):
		j = j
	else:
		v[j] = i
		j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:20) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(v)):
	if(vet[i] > 70):
		j = j
	else:
		v[j] = i
		j = j + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:01:37) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		j = j +1
	else:
		j = j 
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:02:24) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
		j = j +1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:02:58) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(v)):
	if(vet[i] < 70):
		v[j] = i
	j = j + 1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:30) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		v[j] = i
	j = j + 1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:53) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		v[j] = i
		j = j + 1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:04:02) 
-- CODE:
from numpy import*
vet = array(eval(input("aulas frequentadas:")))
rp = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		rp = rp + 1
print(rp)
v = zeros(rp , dtype=int)
j = 0
for i in range(size(vet)):
	if(vet[i] < 70):
		v[j] = i
		j = j + 1
	
print(v)
-- EXECUTION TIME:
1.15423
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 2 5]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
